--- a/repository/org/kar/hudson-api/index.html
+++ b/repository/org/kar/hudson-api/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>Directory listing</h1>
+<h1>Directory listing Wed 22 Feb 2012 22:21:08 PST</h1>
 <hr/>
 <pre>
 <a href="../">../</a>
