add groovychart module

--- a/repository/groovychart/index.html
+++ b/repository/groovychart/index.html
@@ -4,7 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="0.2-SNAPSHOT/">0.2-SNAPSHOT/</a>
+<a href="groovychart/">groovychart/</a>
 </pre>
 </body>
 </html>
