--- a/repository/groovychart/groovychart/index.html
+++ b/repository/groovychart/groovychart/index.html
@@ -4,7 +4,8 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="0.2-SNAPSHOT/">0.2-SNAPSHOT/</a>
+<a href="100307/">100307/</a>
+<a href="maven-metadata-local.xml">maven-metadata-local.xml</a>
 </pre>
 </body>
 </html>
