--- a/repository/index.html
+++ b/repository/index.html
@@ -1,9 +1,10 @@
 <html>
 <body>
-<h1>Directory listing Sat 25 Feb 2012 13:53:31 PST</h1>
+<h1>Directory listing Sun 25 Mar 2012 13:59:23 PDT</h1>
 <hr/>
 <pre>
 <a href="../">../</a>
+<a href="groovychart/">groovychart/</a>
 <a href="org/">org/</a>
 </pre>
 </body>
